Bug 1834930 - Properly build the available memory watcher on iOS. r=xpcom-reviewers,nika

Differential Revision: https://phabricator.services.mozilla.com/D179014